<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp" 
        android:layout_margin="10dp"
        android:text="@string/titleStatus"/>
    
    <EditText android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:hint="@string/hintText"
        android:id="@+id/editText"
        android:gravity="top|center_horizontal"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/buttonUpdate"
        android:text="@string/buttonUpdate"/>
</LinearLayout>
