<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Titile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbg"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="12pt" 
            android:padding="5dp"/>

        <Button
            android:id="@+id/task1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
            android:background="@drawable/buttonbg"
            android:text="@string/task1"
            android:textColor="@android:color/white"
            android:textSize="15pt" />

        <Button
            android:id="@+id/task2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
    
            android:background="@drawable/buttonbg"
            android:text="@string/task2"
            android:textColor="@android:color/white"
            android:textSize="15pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/jiFenBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbg"
            android:gravity="center_horizontal"
            android:text="@string/jiFen"
            android:textColor="@android:color/white"
            android:textSize="15pt" />

        <TextView
            android:id="@+id/zhuanQianBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbgwhite"
            android:gravity="center_horizontal"
            android:text="@string/zhuanQian"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15pt" />
    </LinearLayout>

</LinearLayout>