<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/UserTitile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonbg"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/youmi_qqpay_title"
        android:textColor="@android:color/black"
        android:textSize="12pt" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qqpay_message"
            android:textColor="@android:color/black"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/alipayEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textSize="15pt" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray" >
      
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_weight="0"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbgwhite"
            android:gravity="center_horizontal"
            android:text="@string/back"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15pt" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbg"
            android:gravity="center_horizontal"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="15pt" />
    </LinearLayout>

</LinearLayout>